Seeded database with countries
