# Entities/Models/Country.cs
@@ -1,0 +1,9 @@
+﻿
+namespace CustomerManagementPortal.Entities.Models
+{
+    public class Country : Entity
+    {
+        public string Name { get; set; }
+        public string Code { get; set; }
+    }
+}
